// 获取连接服务器(ip,port)和登录
syntax = "proto3";
package Game.Protocal;
import "EnumType.proto";

// 请求获取
message CSLinkInfo {
    // 唯一标示
    string Sole = 1;
    // 登录平台
    RegisterPlatform Platform = 2;
}

// 返回获取
message SCLinkInfo {
    // ip地址
    uint64 Ip = 1;
    // 端口
    int32 Port = 2;
    // 服务器状态
    ServerStatus Status = 3;
    // 玩家uid
    int64 Uid = 4;
    // 公告
    string Notice = 5;
}
